Pequeños arreglos para publicar el proyecto

--- a/Carga y preprocesamiento de datos/Ejercicios/Ejercicio 1. Adult Dataset/Adult Dataset.ipynb
+++ b/Carga y preprocesamiento de datos/Ejercicios/Ejercicio 1. Adult Dataset/Adult Dataset.ipynb
@@ -1549,45 +1549,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# De forma un poco rudimentaria, pero útil a modo de práctica, podemos emplear el comando .unique() para ver los valores únicos de cada columna\n",
-    "\n",
-    "#print(df[\"age\"].unique()) # Todo correcto, ponemos un # para que la línea no se ejecute \n",
-    "\n",
-    "#####print(df[\"workclass\"].unique()) # Problemas, hay una categoría de datos que es \"?\"\n",
-    "\n",
-    "#print(df[\"fnlwgt\"].unique()) # No se pueden ver todos los datos, hace falta otro método, como un groupby. ### Comprobado que está bien.\n",
-    "\n",
-    "#print(df[\"education\"].unique()) # Todo correcto\n",
-    "\n",
-    "#print(df[\"education-num\"].unique()) # Todo correcto\n",
-    "\n",
-    "#print(df[\"marital-status\"].unique()) # Todo correcto\n",
-    "\n",
-    "#####print(df[\"occupation\"].unique()) # Hay una categoría \"?\"\n",
-    "\n",
-    "#print(df[\"relationship\"].unique()) # Todo correcto\n",
-    "\n",
-    "#print(df[\"race\"].unique()) # Todo correcto\n",
-    "\n",
-    "#print(df[\"sex\"].unique()) # Todo correcto\n",
-    "\n",
-    "#print(df[\"capital-gain\"].unique()) # Todo correcto\n",
-    "\n",
-    "#print(df[\"capital-loss\"].unique()) # Todo correcto\n",
-    "\n",
-    "#print(df[\"hours-per-week\"].unique()) # Todo correcto, aunque hay gente que trabaja más de 90h a la semana, pobrecitos\n",
-    "\n",
-    "#####print(df[\"native-country\"].unique()) # Hay una categoría \"?\"\n",
-    "\n",
-    "#print(df[\"label\"].unique()) # Todo correcto"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
    "outputs": [
@@ -1680,7 +1641,7 @@
     }
    ],
    "source": [
-    "# Una forma más rápida y directa es con el siguiente comando:\n",
+    "# Una forma rápida y directa es con el siguiente comando:\n",
     "for col in df.columns: # Para cada columna del dataframe:\n",
     "    print(df[col].unique()) # Imprimimos los valores/categorías únicas de cada columna\n",
     "    print(\"\\n\") # y un espacio de línea"
