--- a/Carga y preprocesamiento de datos/Ejercicios/Ejercicio 2. Beijing Dataset/Beijing Dataset.ipynb
+++ b/Carga y preprocesamiento de datos/Ejercicios/Ejercicio 2. Beijing Dataset/Beijing Dataset.ipynb
@@ -41,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### La manera de Andrés (no me funcionó, pero la dejo a modo de otra posibilidad disponible)"
+    "### Manera 1 (no me funcionó, pero la dejo a modo de otra posibilidad disponible)"
    ]
   },
   {
@@ -69,7 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### La manera de Demetrio"
+    "### La manera 2"
    ]
   },
   {
